# motto-image-creator

./: .gitignore  1_extract_pdf_pages_with_gemini.py  README.md  TASK_motto_image_creator_1.md  pyproject.toml  run.sh
src/motto_image_creator/: constants.py  file_backed_key_values_store.py  main.py
src/motto_image_creator/api/: routes.py
src/motto_image_creator/models/: schemas.py
src/motto_image_creator/services/: ai_service.py  edit_image_service.py  gemini_image_service.py  vertex_image_service.py
src/motto_image_creator/static/: index.html
